// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/repology/index getReleases returns correct version for binary package 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "1.14.2-2+deb10u1",
    },
  ],
}
`;

exports[`datasource/repology/index getReleases returns correct version for binary package 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/nginx",
  },
]
`;

exports[`datasource/repology/index getReleases returns correct version for multi-package project with different name 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "12.2-4+deb10u1",
    },
  ],
}
`;

exports[`datasource/repology/index getReleases returns correct version for multi-package project with different name 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/pulseaudio-utils",
  },
]
`;

exports[`datasource/repology/index getReleases returns correct version for multi-package project with same name 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "9.3.0-r2",
    },
  ],
}
`;

exports[`datasource/repology/index getReleases returns correct version for multi-package project with same name 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/gcc",
  },
]
`;

exports[`datasource/repology/index getReleases returns correct version for source package 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "1.181",
    },
  ],
}
`;

exports[`datasource/repology/index getReleases returns correct version for source package 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/gcc-defaults",
  },
]
`;

exports[`datasource/repology/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/nginx",
  },
]
`;

exports[`datasource/repology/index getReleases returns null for missing repository or package 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/never-exist",
  },
]
`;

exports[`datasource/repology/index getReleases throws error on unexpected response during binary package lookup 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "repology.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repology.org/api/v1/project/nginx",
  },
]
`;

exports[`datasource/repology/index getReleases throws without repository and package name 1`] = `Array []`;
